Usability fixes (#2362)
* Add placeholder to better indicate that you can type commands in the command box

* Added error message when the GLPanel couldn't be loaded and added possibility to open log directory

* Fixed problem when user chooses a new file that exists and decides not to overwrite the file.

* Displays a warning message when the user must save gcode file befor it can be sent.

* Added more descriptive tooltips

* Updated library versions

* Added action for creating shortcuts

* Added windows icons

* Fixed icon for MacOSX and in the settings panel

* Delete key can now remove objects in the designer